--- a/style_guide_project_files-master/scss/styles.scss
+++ b/style_guide_project_files-master/scss/styles.scss
@@ -5,8 +5,10 @@
 
 
 // NOTE: import utilities and base partials here:
+@import 'base/index';
+@import 'utilities/index';
 
 
 
 // import components partials
-@import 'components';
+@import 'components/index';
