--- a/style_guide_project_files-master/scss/components/_index.scss
+++ b/style_guide_project_files-master/scss/components/_index.scss
@@ -7,3 +7,8 @@
 @import 'grid';
 
 // NOTE: import other components here:
+@import 'typography';
+@import 'navigation';
+@import 'images';
+@import 'buttons';
+@import 'forms';
