--- a/style_guide_project_files-master/scss/components/_forms.scss
+++ b/style_guide_project_files-master/scss/components/_forms.scss
@@ -13,7 +13,7 @@
 
     &__input {
       border: none;
-      border-bottom: 7px solid $primary-color;
+      border-bottom: 7px solid $color-accent;
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 5px;
       margin-bottom: 30px;
