--- a/style_guide_project_files-master/scss/components/_navigation.scss
+++ b/style_guide_project_files-master/scss/components/_navigation.scss
@@ -22,7 +22,7 @@
          &:hover,
          &:active {
            color: $white;
-           background-color: $primary-color;
+           background-color: $color-accent;
          }
        }
     }
