--- a/style_guide_project_files-master/scss/components/_typography.scss
+++ b/style_guide_project_files-master/scss/components/_typography.scss
@@ -2,10 +2,10 @@
 // .container is set on the 'body' element
 .container {
     color: $text-color;
-    font-family: $font-stack; // Lato Google Font
+    font-family: $font-stack;
     font-size: $base__font-size;
     line-height: ( $base__line / $base__font-size );
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
       > .headline--secondary {
         margin-left: em(26px, 20px);
@@ -16,9 +16,9 @@
     &--primary {
       //font size: 36px
       font-size: em($base__font-size * 2);
-      font-weight: 900;
+      font-weight: bold;
       line-height: 1.1;
-      color: $primary-color;
+      color: $color-accent;
       margin-bottom: em(60px, 36px); // 2em is h1 font-size = 18*2= 36px for context
       margin-left: 5%;
     }
@@ -32,15 +32,15 @@
   }
 
   .link {
-    color: $primary-color;
-    font-weight: 700;
+    color: $color-accent;
+    font-weight: bold;
     text-decoration: none;
     width: 165px;
     align-self: center;
   }
 
   .blockquote {
-    border-left: 10px solid $primary-color;
+    border-left: 10px solid $color-accent;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     padding-left: em(10px);
@@ -49,4 +49,28 @@
     line-height: 1.2;
     font-style: italic;
     color: $text-color;
+  }
+
+  @font-face {
+    font-family: "Helvetica Neue";
+    src: url(../../fonts/Helvetica-Neue-Font/MediumExtended/Helvetica\ Neue\ Medium\ Extended.otf);
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Helvetica Neue";
+    src: url(../../fonts/Helvetica-Neue-Font/MediumItalic/Helvetica\ Neue\ W01\ 66\ Medium\ It.otf);
+    font-style: italic;
+  }
+
+  @font-face {
+    font-family: "Helvetica Neue";
+    src: url(../../fonts/Helvetica-Neue-Font/BoldLight/Helvetica\ Neue\ W01\ 77\ Bd\ Cn\ Obl.otf);
+    font-weight: bold;
+  }
+
+  @font-face {
+    font-family: "Helvetica Neue";
+    src: url(../../fonts/Helvetica-Neue-Font/UltraLight/Helvetica\ Neue\ UltraLight.otf);
+    font-weight: 300;
   }
