--- a/style_guide_project_files-master/scss/utilities/_variables.scss
+++ b/style_guide_project_files-master/scss/utilities/_variables.scss
@@ -1,21 +1,49 @@
-//Colors variables
-$primary-color: #58e1c1;
-$default-color: #51ddfc;
-$success-color: #63cc82;
-$error-color: #e4757a;
-$warning-color: #fd7856;
-$info-color: #927bc1;
-
-$subheadings-color: #aaaaaa; //check if lighten is not best option => lighten($text-color, 30%);
-$text-color: #878787;
+// Descriptive Colors variables
 $white: #fff;
+$dark-grey: #384047;
+$light-grey: lighten($dark-grey, 30%);
+$malibu: #51ddfc;;
+$emerald: #63cc82;
+$sunglo: #e4757a;
+$coral: #fd7856;
+$purple-mtn-majesty: #927bc1;
+
+// Colors by function variables
+$text-color: $light-grey;
+$color-bg: $white;
+$color-accent: mix($malibu, $emerald, 50%);
+$subheadings-color: #aaaaaa; //check if lighten is not best option => lighten($text-color, 30%);
+
+// UI Colors Map variables
+$ui-colors: (
+	default : $malibu,
+	success : $emerald,
+	error   : $sunglo,
+	warning : $coral,
+	info    : $purple-mtn-majesty
+);
+
+//Grid Columns variables
+$grid-colors: (
+	1: lighten($dark-grey, 10%),
+	2: lighten($coral, 20%),
+	3: lighten($purple-mtn-majesty, 15%),
+	4: darken($emerald, 10%),
+	5: lighten($emerald, 10%),
+	6: darken($malibu, 20%),
+	7: darken($sunglo, 10%),
+	8: darken($coral, 10%),
+	9: lighten($sunglo, 10%),
+	10: darken($purple-mtn-majesty, 10%),
+	11: lighten($coral, 10%),
+	12: lighten($malibu, 10%)
+);
 
 //Fonts Variables
-$font-url--google: 'https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900';
-$font-stack: 'Lato', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+$font-stack: 'Helvetica Neue', Helvetica, sans-serif;
 $base__font-size: 18px;
 $base__line: 30px;
 
 // Breakpoints Variables
-$break-medium: 769px;
-$break-desktop: 1400px;
+$break-md: 769px;
+$break-lg: 1400px;
