--- a/style_guide_project_files-master/scss/utilities/_placeholders.scss
+++ b/style_guide_project_files-master/scss/utilities/_placeholders.scss
@@ -22,20 +22,8 @@
     }
 }
 
-
+//make the image blueishy
 %img {
     //https://stackoverflow.com/questions/44023583/css3-grey-image-to-blue-color-using-filters
     filter: sepia(100%) hue-rotate(190deg) saturate(500%);
-    &.border {
-        padding: 10px;
-        border: 3px solid $subheadings-color;
-    }
-    &.round {
-        border-radius: 50%;
-    }
-}
-
-%a {
-    text-decoration: none;
-    color: $malibu;
 }
