--- a/style_guide_project_files-master/scss/components/_grid.scss
+++ b/style_guide_project_files-master/scss/components/_grid.scss
@@ -16,8 +16,11 @@
         flex-direction: column;
 
         // NOTE: replace with media query mixin if aiming for exceeds
-        @media (min-width: 768px) {
-        flex-direction: row;
+        //@media (min-width: 768px) {
+        //flex-direction: row;
+        @include mq(med) {
+            flex-direction: row;
+            align-items: center;
         }
     }
 
@@ -39,13 +42,14 @@
                 flex-basis: 100%;
 
                 // NOTE: replace with media query mixin if aiming for exceeds
-                @media (min-width: 768px) {
+                //@media (min-width: 768px) {
+                @include mq(med) {
 
-                // base stlyes applied to all grid columns
-                margin-top: 0;
+                    // base stlyes applied to all grid columns
+                    margin-top: 0;
 
-                // make column width a percentage of the column number / total columns
-                flex-basis: #{calc($i / 12) * 100} + "%";
+                    // make column width a percentage of the column number / total columns
+                    flex-basis: #{calc($i / 12) * 100} + "%";
                 }
             }
         }
@@ -66,20 +70,33 @@
     & + & {
 
         // NOTE: replace with media query mixin if aiming for exceeds
-        @media (min-width: 768px) {
+        //@media (min-width: 768px) {
+        @include mq(med) {
 
             // add grid gutter
             margin-left: 10px;
         }
+    }
+
+    @include flexy(column);
+
+    @include mq(med) {
+      flex-direction: row;
     }
 }
 
 .container {
     background: $white;
     margin: 0 auto;
-    padding: 0 em(20px);
+    padding: 0 em(25px);
+
+    @include mq(large) {
+        max-width: 1050px;
+    }
 }
 
 .centered {
-    margin: 0 auto;
+    @include mq(med) {
+        margin: 0 auto;
+    }
 }
