--- a/style_guide_project_files-master/scss/components/_typography.scss
+++ b/style_guide_project_files-master/scss/components/_typography.scss
@@ -1,4 +1,3 @@
-
 // .container is set on the 'body' element
 .container {
     color: $text-color;
@@ -7,39 +6,36 @@
     line-height: calc( $base__line / $base__font-size );
     font-weight: normal;
     font-style: normal;
-      > .headline--secondary {
-        margin-left: em(26px, 20px);
-      }
-  }
+}
 
-  .headline {
+.headline {
     &--primary {
-      //font size: 36px
-      font-size: em($base__font-size * 2);
-      font-weight: bold;
-      line-height: 1.1;
-      color: $color-accent;
-      margin-bottom: em(60px, 36px); // 2em is h1 font-size = 18*2= 36px for context
-      margin-left: 5%;
+    //font size: 36px
+    font-size: em($base__font-size * 2);
+    font-weight: bold;
+    line-height: 1.1;
+    color: $color-accent;
+    margin-bottom: em(60px, 36px); // 2em is h1 font-size = 18*2= 36px for context
+    margin-left: 5%;
     }
     &--secondary {
-      // font-size 20px
-      font-size: em($base__font-size + 2px);
-      font-weight: 300;
-      line-height: 1.2;
-      margin: em(40px, 20px) 0 em(28px, 20px);
+    // font-size 20px
+    font-size: em($base__font-size + 2px);
+    font-weight: normal;
+    line-height: 1.2;
+    margin: em(40px, 20px) 0 em(28px, 20px);
     }
-  }
+}
 
-  .link {
+.link {
     color: $malibu;
     font-weight: bold;
     text-decoration: none;
     width: 165px;
     align-self: center;
-  }
+}
 
-  .blockquote {
+.blockquote {
     border-left: 10px solid $color-accent;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -49,28 +45,4 @@
     line-height: 1.2;
     font-style: italic;
     color: $text-color;
-  }
-
-  @font-face {
-    font-family: "Helvetica Neue";
-    src: url(../../fonts/Helvetica-Neue-Font/MediumExtended/Helvetica\ Neue\ Medium\ Extended.otf);
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: "Helvetica Neue";
-    src: url(../../fonts/Helvetica-Neue-Font/MediumItalic/Helvetica\ Neue\ W01\ 66\ Medium\ It.otf);
-    font-style: italic;
-  }
-
-  @font-face {
-    font-family: "Helvetica Neue";
-    src: url(../../fonts/Helvetica-Neue-Font/BoldLight/Helvetica\ Neue\ W01\ 77\ Bd\ Cn\ Obl.otf);
-    font-weight: bold;
-  }
-
-  @font-face {
-    font-family: "Helvetica Neue";
-    src: url(../../fonts/Helvetica-Neue-Font/UltraLight/Helvetica\ Neue\ UltraLight.otf);
-    font-weight: 300;
-  }
+}
