--- a/style_guide_project_files-master/scss/utilities/_variables.scss
+++ b/style_guide_project_files-master/scss/utilities/_variables.scss
@@ -28,22 +28,16 @@ $grid-colors: (
 	1: lighten($dark-grey, 10%),
 	2: lighten($coral, 20%),
 	3: lighten($purple-mtn-majesty, 15%),
-	4: darken($emerald, 10%),
+	4: lighten($malibu, 15%),
 	5: lighten($emerald, 10%),
-	6: darken($malibu, 20%),
-	7: darken($sunglo, 10%),
-	8: darken($coral, 10%),
+	6: darken($malibu, 25%),
+	7: lighten($sunglo, 10%),
+	8: lighten($coral, 10%),
 	9: lighten($sunglo, 10%),
-	10: darken($purple-mtn-majesty, 10%),
+	10: lighten($purple-mtn-majesty, 10%),
 	11: lighten($coral, 10%),
-	12: lighten($malibu, 10%)
+	12: lighten($color-accent, 10%)
 );
-
-// Grid
-$grid-col-width: 65px;
-$grid-gutter-width: 20px;
-$grid-col-count: 12;
-$grid-container-max-width: 1050px;
 
 //Fonts Variables
 $font-stack: 'Helvetica Neue', Helvetica, sans-serif;
